--- a/src/scene/setting/setting.fxml
+++ b/src/scene/setting/setting.fxml
@@ -3,6 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.PasswordField?>
@@ -16,7 +17,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="509.0" prefWidth="600.0" style=" -fx-border-color:black; -fx-border-width: 1; -fx-border-style: solid;" xmlns="http://javafx.com/javafx/8.0.112" xmlns:fx="http://javafx.com/fxml/1" fx:controller="scene.setting.setting_controller">
+<GridPane fx:id="main_grid_pane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="509.0" prefWidth="600.0" style=" -fx-border-color:black; -fx-border-width: 1; -fx-border-style: solid;" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="scene.setting.setting_controller">
     <columnConstraints>
         <ColumnConstraints halignment="CENTER" maxWidth="36" minWidth="36" prefWidth="36" />
         <ColumnConstraints minWidth="100" prefWidth="563" />
@@ -44,27 +45,38 @@
                             <ColumnConstraints halignment="CENTER" minWidth="30.0" prefWidth="100.0" />
                         </columnConstraints>
                         <rowConstraints>
+                            <RowConstraints minHeight="30" prefHeight="50.0" valignment="CENTER" />
                             <RowConstraints minHeight="30" prefHeight="400.0" valignment="CENTER" />
                             <RowConstraints minHeight="30.0" prefHeight="30.0" valignment="CENTER" />
                         </rowConstraints>
                         <children>
-                            <ListView fx:id="setting_history_listview" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="370.0" prefWidth="596.0" GridPane.columnIndex="0" GridPane.columnSpan="2" GridPane.rowIndex="0">
+                     <DatePicker fx:id="setting_history_datepicker" onAction="#populate_setting_history_listview" GridPane.columnIndex="0" GridPane.columnSpan="1" GridPane.halignment="LEFT" GridPane.rowIndex="0">
+                        <GridPane.margin>
+                           <Insets left="50.0" />
+                        </GridPane.margin>
+                     </DatePicker>
+                            <ListView fx:id="setting_history_listview" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="370.0" prefWidth="596.0" style="-fx-font-family: monospace;" GridPane.columnIndex="0" GridPane.columnSpan="2" GridPane.halignment="LEFT" GridPane.rowIndex="1">
                             </ListView>
-                            <Button fx:id="setting_history_button_printrecap" mnemonicParsing="false" onAction="#history_printrecap_button" text="Print recap" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.rowIndex="1">
+                            <Button fx:id="setting_history_button_printrecap" mnemonicParsing="false" onAction="#history_printrecap_button" text="Print recap" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.rowIndex="2">
                                 <GridPane.margin>
                                    <Insets />
                                 </GridPane.margin>
                             </Button>
-                     <Button fx:id="setting_history_button_printsettings" onAction="#history_printsettings_button" mnemonicParsing="false" text="Print Settings" GridPane.halignment="RIGHT" GridPane.rowIndex="1">
+                     <Button fx:id="setting_history_button_printsettings" mnemonicParsing="false" onAction="#history_printsettings_button" text="Print Settings" GridPane.halignment="RIGHT" GridPane.rowIndex="2">
                         <GridPane.margin>
-                           <Insets right="120.0" />
+                           <Insets right="150.0" />
                         </GridPane.margin>
                      </Button>
-                            <Button fx:id="setting_history_button_deleteall" mnemonicParsing="false" onAction="#history_deleteall_button" text="Delete all" GridPane.halignment="RIGHT" GridPane.rowIndex="1">
+                            <Button fx:id="setting_history_button_deleteall" mnemonicParsing="false" onAction="#history_monthly_report_button" text="Monthly Report" GridPane.halignment="RIGHT" GridPane.rowIndex="2">
                                 <GridPane.margin>
-                                   <Insets right="20.0" />
+                                   <Insets right="12.0" />
                                 </GridPane.margin>
                             </Button>
+                     <Label text="Date :" GridPane.halignment="LEFT">
+                        <GridPane.margin>
+                           <Insets left="5.0" />
+                        </GridPane.margin>
+                     </Label>
                         </children>
                     </GridPane>
                 </Tab>
